Corrected problem with buttons on firefox.

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,3 +1,7 @@
+.attachment.attachment-before {
+  clear: both;
+}
+
 .print_button {
   float: right;
 }
